# OS_labs_2023

lab1/: CMakeLists.txt  README.md  build.sh  config.cpp  config.h  config.txt  daemon.cpp  daemon.h  main.cpp
lab2/: CMakeLists.txt  README.md  build.sh
lab2/client/: client.cpp  client.h
lab2/connections/: conn.h  conn_fifo.cpp  conn_fifo.h  conn_mq.cpp  conn_mq.h  conn_sock.cpp  conn_sock.h
lab2/host/: host.cpp  host.h  main.cpp
lab2/utils/: message.h  utils.cpp  utils.h
lab3/: CMakeLists.txt  README.md  build.sh
lab3/include/: node_coarse.h  set_coarse.h
lab3/src/: main.cpp
